# csoc4353

./: README.md
.github/workflows/: coverage.yml
plan/: architecture.md  diagram.puml
src/backend/: Cargo.toml  config.toml
src/backend/src/: autoauth.rs  config.rs  database.rs  jwt.rs  main.rs  routes.rs
src/backend/static/: styles.css
src/backend/templates/: fuel_quote.html.tera  fuel_quote_dummy.html.tera  fuel_quote_form.html.tera  fuel_quote_history.html.tera  home.html.tera  login_page.html.tera  placeholder.html.tera  profile_management.html.tera
src/frontend/: fuel_quote_form.html  fuel_quote_history.html  home.html  index.html  login_page.html  profile_managment.html  styles.css
