[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = {version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite" ] }
toml = "0.8.10"

# Used for passwords/auth
ring = "0.17.0-alpha.11"
jwt = "0.16.0"
hmac = "0.12.1"
sha2 = "0.10.6"
thiserror = "1.0.57"
uuid = { version = "1.7.0", features = ["v4"] }
